# opengl-sandbox

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp
